# ufs_ftnutils

./: CMakeLists.txt  DISCLAIMER.md  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: containers.yaml
Docker/: ubuntu20.04.ufs_ftnutils.dockerfile
sorc/fson/: CMakeLists.txt
sorc/ftnutils/: CMakeLists.txt  ftnutils_contants.F90  ftnutils_errors.F90  ftnutils_json.F90  ftnutils_kinds.F90  ftnutils_log.F90  ftnutils_netcdf.F90
sorc/slint/: CMakeLists.txt
